# project_Life

./: CMakeLists.txt  README.md
build_canvas/: CMakeCache.txt  Makefile  canvas  cmake_install.cmake
dev_canvas/: CMakeLists.txt
dev_canvas/include/: canvas.h  common.h
dev_canvas/src/: canvas.cpp  driver_canvas.cpp
include/: file.hpp  inputReader.hpp  life.hpp
lib/configFileRider/: file.cpp  file.h  inputReader.cpp  inputReader.h
src/: file.cpp  inputReader.cpp  life.cpp  main.cpp
